--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CatWiki - Estudo</title>
-  <link rel="stylesheet" href="./style/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -15,8 +15,8 @@
   <header class="header-bg">
     <div class="header">
       <picture>
-        <source media="(max-width: 800px)" srcset="img/catwiki-logo.svg">
-        <img src="img/catwiki-logo.svg" alt="Logo da CatWiki">
+        <source media="(max-width: 800px)" srcset="/img/catwiki-logo.svg">
+        <img src="/img/catwiki-logo.svg" alt="Logo da CatWiki">
       </picture>
       <nav>
         <ul class="header-menu">
